# shipProject

./: README.md
camera/: CMakeLists.txt
camera/src/: main.cpp
deb_lights/: CMakeLists.txt
deb_lights/src/: pills.cpp
objects/: CMakeLists.txt
objects/src/: main.cpp
ocean/: CMakeLists.txt
ocean/src/: main.cpp
ship/: CMakeLists.txt
ship/src/: main.cpp
vsgPendulum/: CMakeLists.txt
vsgPendulum/src/: builderModels.cpp  builderModels.hpp  main.cpp  pData.hpp  pMath.cpp  pMath.hpp
